--- a/src/css/DateView.module.css
+++ b/src/css/DateView.module.css
@@ -1,3 +1,3 @@
 
-.date { text-align: center; }
+.date { text-align: center; font-size: 60px; font-weight: 600;}
 .week { text-align: center; font-weight: 600; padding:20px 0; }
